Change the build.gradle to get it working again.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,11 +58,11 @@ android {
 
     productFlavors {
         dev {
-            applicationIdSuffix ".dev"
+            applicationId "com.makinglifeeasie.closetconscious.dev"
             versionNameSuffix "-dev"
         }
         prod {
-            applicationIdSuffix ".prod"
+            applicationId "com.makinglifeeasie.closetconscious"
         }
     }
 
