Using Base64 to get Json back to its original view

--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -232,7 +232,7 @@ jobs:
       - name: Create service account key
         run: |
           mkdir -p config
-          echo "${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}" >> config/google_play_key.json
+          echo "${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_JSON }}" | base64 --decode > config/google_play_key.json
 
       - name: Debug Google Play Key JSON (NEW STEP for debugging)
         run: head -c 100 config/google_play_key.json
