--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.4.0
   confetti: ^0.7.0
   google_sign_in: ^6.2.1
+  google_fonts: ^6.2.1
   supabase_flutter: ^2.5.2
   http: ^1.2.2
   fluttertoast: ^8.2.8
