Features updated - Implemented paywall first draft, see if can do billing - Got the payment screen price obtained from Google Billing

--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -125,6 +125,13 @@ jobs:
       - run: supabase link --project-ref $SUPABASE_PROJECT_ID
       - run: supabase db push
 
+      # Deploy the Edge Function for purchase verification
+      - name: Deploy purchase-verification-android Edge Function
+        run: |
+          supabase functions deploy purchase-verification-android \
+            --project-ref $SUPABASE_PROJECT_ID \
+            --token $SUPABASE_ACCESS_TOKEN
+
   deploy_prod_ui:
     needs: deploy_prod_supabase
     runs-on: ubuntu-latest
