--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,12 @@ android {
         targetSdkVersion 34
         versionCode buildNumber.toInteger()  // Automatically use build number for versionCode
         versionName buildVersionName         // Version name format: "1.0.123"
+
+        ndk {
+            // Choose between 'SYMBOL_TABLE' for basic symbols or 'FULL' for full debug info
+            debugSymbolLevel 'SYMBOL_TABLE'
+        }
+
     }
     flavorDimensions "default"
 
