--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   localization: ^2.1.1
+  sentry_flutter: ^8.9.0
   in_app_purchase: ^3.2.0
   logging: ^1.2.0
   logger: ^2.2.0
