--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,8 +18,15 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+// Define the major and minor version manually
+def majorVersion = 1
+def minorVersion = 3  // You can manually update this for each release
+
 // Get the build number from the environment variable (set in GitHub Actions)
 def buildNumber = System.getenv("BUILD_NUMBER") ?: '1'
+
+// Create the version name using major, minor, and build numbers
+def buildVersionName = "${majorVersion}.${minorVersion}.${buildNumber}"
 
 android {
 
@@ -45,6 +52,7 @@ android {
         minSdkVersion 27
         targetSdkVersion 34
         versionCode buildNumber.toInteger()  // Automatically use build number for versionCode
+        versionName buildVersionName         // Version name format: "1.0.123"
     }
     flavorDimensions "default"
 
