Updated the versioning to semantic version 2, simplify build number

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,13 +24,13 @@ def minorVersion = 6  // You can manually update this for each release
 def patchVersion = 0
 
 // Get the build number from the environment variable (set in GitHub Actions)
-def buildNumber = System.getenv("BUILD_NUMBER") ?: '1'
+def buildNumber = (System.getenv("BUILD_NUMBER") ?: '1').toInteger()
 
 // Create the version name using major, minor, and patch versions
 def versionName = "${majorVersion}.${minorVersion}.${patchVersion}"
 
 // Set the versionCode as the build number, ensuring a unique integer for each release
-def versionCode = buildNumber.toInteger()
+versionCode buildNumber
 
 
 android {
@@ -57,7 +57,7 @@ android {
         applicationId "com.makinglifeeasie.closetconscious"
         minSdkVersion 27
         targetSdkVersion 34
-        versionCode buildNumber.toInteger()
+        versionCode buildNumber
         versionName versionName
     }
     flavorDimensions "default"
