--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,7 @@ def patchVersion = 0
 def buildNumber = (System.getenv("BUILD_NUMBER") ?: '1').toInteger()
 
 // Create the version name using major, minor, and patch versions
-def versionName = "${majorVersion}.${minorVersion}.${patchVersion}"
+def appVersionName  = "${majorVersion}.${minorVersion}.${patchVersion}"
 
 
 android {
@@ -55,7 +55,7 @@ android {
         minSdkVersion 27
         targetSdkVersion 34
         versionCode buildNumber
-        versionName versionName
+        versionName appVersionName
     }
     flavorDimensions "default"
 
