--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,10 @@ dependencies:
   uuid: ^4.4.0
   confetti: ^0.7.0
   google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.3
+  crypto: ^3.0.6
   google_fonts: ^6.2.1
-  supabase_flutter: ^2.5.2
+  supabase_flutter: ^2.8.0
   http: ^1.2.2
   camera: ^0.11.0
   permission_handler: ^11.3.1
@@ -91,7 +93,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following pages: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
