--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -328,7 +328,13 @@ jobs:
           CI: true  # This enables automatic provisioning
         run: |
           flutter build ipa --release --flavor Runner-prod --target=lib/main_prod.dart --dart-define=ENV=prod --build-name=1.6.0 --build-number=$BUILD_NUMBER 
+
+      - name: Archive iOS with xcodebuild
+        run: |
           xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner-prod -configuration Release -archivePath $PWD/build/Runner.xcarchive archive -allowProvisioningUpdates
+
+      - name: Export iOS IPA
+        run: |
           xcodebuild -exportArchive -archivePath $PWD/build/Runner.xcarchive -exportOptionsPlist ios/Runner/ExportOptions.plist -exportPath $PWD/build/Runner -allowProvisioningUpdates
 
       - name: Fetch Git commit messages for release notes
