--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -340,6 +340,9 @@ jobs:
         run: |
           echo "$APP_STORE_CONNECT_API_KEY" | base64 --decode > AuthKey_SH96BHL99W.p8
 
+      - name: List Files in Root Directory
+        run: ls -la
+
       - name: Fetch Git commit messages for release notes
         run: |
           release_notes=$(git log -1 --oneline | sed "s/'//g")
