--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -339,9 +339,12 @@ jobs:
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
         run: |
           echo "$APP_STORE_CONNECT_API_KEY" | base64 --decode > AuthKey_SH96BHL99W.p8
+          chmod 644 AuthKey_SH96BHL99W.p8  # Set read permissions
 
-      - name: List Files in Root Directory
-        run: ls -la
+      - name: Verify .p8 file
+        run: |
+          ls -la AuthKey_SH96BHL99W.p8
+          readlink -f AuthKey_SH96BHL99W.p8  # Print absolute path
 
       - name: Fetch Git commit messages for release notes
         run: |
