Address edit item rpc to deal with empty string and also sending right file folder structure for fastfile

--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -338,6 +338,7 @@ jobs:
         env:
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY }}
         run: |
+          mkdir -p fastlane
           echo "$APP_STORE_CONNECT_API_KEY" | base64 --decode > fastlane/AuthKey_SH96BHL99W.p8
           chmod 644 fastlane/AuthKey_SH96BHL99W.p8  # Set permissions if necessary
 
