--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -324,6 +324,9 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
+      - name: Check Installed Provisioning Profile
+        run: ls ~/Library/MobileDevice/Provisioning\ Profiles/
+
       # Install CocoaPods for iOS dependencies
       - name: Install CocoaPods
         run: |
@@ -371,6 +374,12 @@ jobs:
           APP_STORE_CONNECT_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}
           RELEASE_NOTES: ${{ env.RELEASE_NOTES }}
           FASTLANE_SKIP_CONFIRMATIONS: true
+
+      - name: Upload Fastlane Log
+        uses: actions/upload-artifact@v2
+        with:
+          name: fastlane-log
+          path: ~/Library/Logs/gym/Runner-Runner-prod.log
 
       # Upload dSYM files to Sentry
       - name: Upload Debug Symbols to Sentry
