--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -285,33 +285,59 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-flutter-
 
-      # Cache CocoaPods dependencies
-      - name: Cache CocoaPods
+      # Step 1: Attempt to Restore CocoaPods Cache
+      - name: Restore CocoaPods Cache
         uses: actions/cache@v4
         with:
           path: |
-            ios/Pods
-            ~/Library/Caches/CocoaPods
+            ios/Pods  # Caches the installed Pods in the ios directory
+            ~/Library/Caches/CocoaPods  # Caches CocoaPods system cache
           key: ${{ runner.os }}-cocoapods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-cocoapods-
+            ${{ runner.os }}-cocoapods-         
 
-      - name: Check CocoaPods Cache Directory
-        run: ls -la ~/Library/Caches/CocoaPods
-
+      # Step 2: Attempt to Restore Xcode DerivedData Cache
       - name: Cache Xcode DerivedData
         uses: actions/cache@v4
         with:
           path: ~/Library/Developer/Xcode/DerivedData
           key: ${{ runner.os }}-deriveddata-${{ hashFiles('Podfile.lock') }}
           restore-keys: |
-            ${{ runner.os }}-deriveddata-
+            ${{ runner.os }}-deriveddata-        
 
-      - name: Check Xcode DerivedData Directory
-        run: ls -la ~/Library/Developer/Xcode/DerivedData
+      # Step 3: Verify CocoaPods and Xcode DerivedData Cache Restoration
+      # List the CocoaPods cache directory
+      - name: List CocoaPods Cache Directory
+        run: ls -la ~/Library/Caches/CocoaPods || echo "CocoaPods cache directory is empty or does not exist"
 
+      # List the iOS Pods directory
+      - name: List iOS Pods Directory
+        run: ls -la ios/Pods || echo "Pods directory is empty or does not exist"
+
+      # List the Xcode DerivedData directory
+      - name: List Xcode DerivedData Directory
+        run: ls -la ~/Library/Developer/Xcode/DerivedData || echo "DerivedData directory is empty or does not exist"
+
+      # Step 4: Run flutter pub get to install dependencies
       - name: Install dependencies
         run: flutter pub get
+
+      # Install CocoaPods for iOS dependencies
+      - name: Install CocoaPods
+        run: |
+          cd ios
+          pod install
+          cd ..
+
+      # Step 5: Update CocoaPods and Xcode DerivedData Cache
+      - name: Update CocoaPods and Xcode DerivedData Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/Library/Developer/Xcode/DerivedData
+          key: ${{ runner.os }}-cocoapods-${{ hashFiles('**/Podfile.lock') }}
 
       - name: Set Build Number
         id: versioning
@@ -319,13 +345,6 @@ jobs:
           versionCode=$(git rev-list --count HEAD)
           echo "BUILD_NUMBER=$versionCode" >> $GITHUB_ENV
           echo "VERSION_NAME=1.6.0" >> $GITHUB_ENV
-
-      # Clean Xcode DerivedData and Pods Cache
-      - name: Clean Xcode DerivedData and Pods Cache
-        run: |
-          rm -rf ~/Library/Developer/Xcode/DerivedData
-          rm -rf ios/Pods
-          pod cache clean --all
 
       # Create and configure a temporary keychain
       - name: Setup Keychain for CI
@@ -354,13 +373,6 @@ jobs:
 
       - name: Check Installed Provisioning Profile
         run: ls ~/Library/MobileDevice/Provisioning\ Profiles/
-
-      # Install CocoaPods for iOS dependencies
-      - name: Install CocoaPods
-        run: |
-          cd ios
-          pod install
-          cd ..
 
       # Create app_config_prod.json with environment variables
       - name: Create app_config_prod.json
