--- a/.github/workflows/CI_Trunk.yml
+++ b/.github/workflows/CI_Trunk.yml
@@ -283,15 +283,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-cocoapods-         
 
-      # Step 2: Attempt to Restore Xcode DerivedData Cache
-      - name: Cache Xcode DerivedData
-        uses: actions/cache@v4
-        with:
-          path: ~/Library/Developer/Xcode/DerivedData
-          key: ${{ runner.os }}-deriveddata-${{ hashFiles('Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deriveddata-            
-
       # Restore Cache for Flutter dependencies
       - name: Restore Flutter Cache
         uses: actions/cache@v4
@@ -304,7 +295,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-flutter-
 
-      # Step 3: Verify CocoaPods and Xcode DerivedData Cache Restoration
+      # Step 3: Verify CocoaPods Cache Restoration
       # List the CocoaPods cache directory
       - name: List CocoaPods Cache Directory
         run: ls -la ~/Library/Caches/CocoaPods || echo "CocoaPods cache directory is empty or does not exist"
@@ -312,10 +303,6 @@ jobs:
       # List the iOS Pods directory
       - name: List iOS Pods Directory
         run: ls -la ios/Pods || echo "Pods directory is empty or does not exist"
-
-      # List the Xcode DerivedData directory
-      - name: List Xcode DerivedData Directory
-        run: ls -la ~/Library/Developer/Xcode/DerivedData || echo "DerivedData directory is empty or does not exist"
 
       # Step 4: Run flutter pub get to install dependencies
       - name: Install dependencies
@@ -328,10 +315,6 @@ jobs:
           pod install
           cd ..
 
-      # Build iOS (to create DerivedData)
-      - name: Build iOS app (populate DerivedData)
-        run: flutter build ios --no-codesign
-
       # Save/Update Cache for CocoaPods
       - name: Cache CocoaPods
         uses: actions/cache@v4
@@ -342,15 +325,6 @@ jobs:
           key: ${{ runner.os }}-cocoapods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-cocoapods-
-
-      # Save/Update Cache for Xcode DerivedData
-      - name: Cache Xcode DerivedData
-        uses: actions/cache@v4
-        with:
-          path: ~/Library/Developer/Xcode/DerivedData
-          key: ${{ runner.os }}-deriveddata-${{ hashFiles('Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-deriveddata-
 
       # Save/Update Cache for Flutter dependencies
       - name: Cache Flutter dependencies
@@ -370,9 +344,6 @@ jobs:
 
       - name: List iOS Pods Directory
         run: ls -la ios/Pods || echo "Pods directory is empty or does not exist"
-
-      - name: List Xcode DerivedData Directory
-        run: ls -la ~/Library/Developer/Xcode/DerivedData || echo "DerivedData directory is empty or does not exist"
 
       - name: Set Build Number
         id: versioning
